Collaborative Filtering Recommendation Done
1. View rated restaurant
2. Generate Recommended Restaurant
3. Calculate Ratings for each Dining Spot

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestMap">
-        <activity android:name=".ViewRestaurantProfile"/>
+        <activity android:name=".RecommendDiningSpot"></activity>
+        <activity android:name=".ViewRatedRestaurant" />
+        <activity android:name=".ViewRestaurantProfile" />
         <activity android:name=".DebtRecordByIndividual" />
         <activity android:name=".AddNewBillForm" />
         <activity android:name=".UserLogin">
